--- a/app/src/main/res/layout/activity_search_blank.xml
+++ b/app/src/main/res/layout/activity_search_blank.xml
@@ -26,18 +26,38 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/imagemIngles" />
+            app:srcCompat="@drawable/ingles" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="182dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="156dp"
+            android:layout_marginBottom="709dp"
             android:text="ENGLISH"
             android:textAlignment="center"
             android:textColor="#052D39"
             android:textSize="18dp"
-            tools:layout_editor_absoluteX="206dp"
-            tools:layout_editor_absoluteY="143dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="119dp"
+            android:layout_marginEnd="119dp"
+            android:layout_marginBottom="538dp"
+            android:text="Type a word"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="center"
+            android:textColor="#052D39"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
