--- a/app/src/main/res/layout/activity_search_blank.xml
+++ b/app/src/main/res/layout/activity_search_blank.xml
@@ -16,47 +16,45 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="26dp"
+            android:layout_height="27dp"
             android:layout_marginStart="149dp"
             android:layout_marginTop="44dp"
             android:layout_marginEnd="237dp"
             android:layout_marginBottom="707dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="149dp"
+            tools:layout_editor_absoluteY="44dp"
             app:srcCompat="@drawable/ingles" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="74dp"
+            android:layout_height="21dp"
             android:layout_marginStart="182dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="156dp"
             android:layout_marginBottom="709dp"
-            android:text="ENGLISH"
+            android:text="@string/idioma_ingles"
             android:textAlignment="center"
             android:textColor="#052D39"
             android:textSize="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_editor_absoluteX="182dp"
+            tools:layout_editor_absoluteY="48dp"/>
 
         <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="174dp"
+            android:layout_height="38dp"
             android:layout_marginStart="119dp"
             android:layout_marginEnd="119dp"
+            android:layout_marginTop="202dp"
             android:layout_marginBottom="538dp"
-            android:text="Type a word"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/text_search_blank"
+            android:fontFamily="sans-serif-condensed-light"
             android:textAlignment="center"
-            android:textColor="#052D39"/>
+            android:textColor="#052D39"
+            android:textSize="32dp"
+            tools:layout_editor_absoluteX="119dp"
+            tools:layout_editor_absoluteY="202dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
