--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,40 +15,41 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Carlos Eduardo da Silva"
-            app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintStart_toStartOf="@+id/imageView2"
-            tools:layout_editor_absoluteY="755dp"
+            android:layout_width="112dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="41dp"
+            android:textSize="22dp"
+            android:fontFamily="sans-serif-condensed-light"
+            android:textColor="#052D39"
+            android:textAlignment="center"
+            android:text="@string/nome_dev"
+            tools:layout_editor_absoluteX="150dp"
+            tools:layout_editor_absoluteY="712dp"
             tools:ignore="MissingConstraints" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="130dp"
-            android:layout_height="119dp"
-            android:layout_marginStart="172dp"
-            android:layout_marginTop="292dp"
-            android:layout_marginEnd="162dp"
-            android:layout_marginBottom="408dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.549"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icon" />
+            android:layout_width="78dp"
+            android:layout_height="78dp"
+            app:srcCompat="@drawable/icon"
+            tools:layout_editor_absoluteX="172dp"
+            tools:layout_editor_absoluteY="292dp"
+            tools:ignore="MissingConstraints" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="226dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="116dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintHorizontal_bias="0.721"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:srcCompat="@drawable/title" />
+            android:layout_width="188.43dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="116.78dp"
+            android:layout_marginEnd="106.78dp"
+            android:layout_marginTop="22dp"
+            tools:layout_editor_absoluteX="116.78dp"
+            tools:layout_editor_absoluteY="392dp"
+            app:srcCompat="@drawable/title"
+            tools:ignore="MissingConstraints" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
