--- a/app/src/main/res/layout/activity_search_blank.xml
+++ b/app/src/main/res/layout/activity_search_blank.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="44dp"
             android:layout_marginEnd="237dp"
             android:layout_marginBottom="707dp"
+            android:contentDescription="@string/imagem_bandeira_ingles"
             tools:layout_editor_absoluteX="149dp"
             tools:layout_editor_absoluteY="44dp"
             app:srcCompat="@drawable/ingles" />
@@ -37,7 +38,7 @@
             android:text="@string/idioma_ingles"
             android:textAlignment="center"
             android:textColor="#052D39"
-            android:textSize="18dp"
+            android:textSize="18sp"
             tools:layout_editor_absoluteX="182dp"
             tools:layout_editor_absoluteY="48dp"/>
 
@@ -50,9 +51,10 @@
             android:layout_marginBottom="538dp"
             android:hint="@string/text_search_blank"
             android:fontFamily="sans-serif-condensed-light"
+            android:inputType="text"
             android:textAlignment="center"
             android:textColor="#052D39"
-            android:textSize="32dp"
+            android:textSize="32sp"
             tools:layout_editor_absoluteX="119dp"
             tools:layout_editor_absoluteY="202dp" />
 
